--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,19 @@
+nvidia-graphics-drivers (1.0.7167-1) unstable; urgency=low
+
+  * New upstream. (closes: #299073)
+  * Disable patching for new version.
+
+ -- Randall Donald <rdonald@debian.org>  Fri, 11 Mar 2005 13:46:57 -0800
+
 nvidia-graphics-drivers (1.0.6629+1-2) unstable; urgency=high
 
   * Add patches for new (> 2.6.10-rc3-bk13) kernels from
     minion.de. Thanks to Drew Hess <dhess@bothan.net>
     (closes: #280224, #281640, #287226)
   * updated minion patches from 16 Feb 2005
-  * urgency high to get back in to sarge asap.
+  * urgency high to get back in to sarge asap. 
 
- -- Randall Donald <rdonald@debian.org>  Fri, 18 Feb 2005 15:14:23 -0800
+ -- Randall Donald <rdonald@debian.org>  Fri, 18 Feb 2005 15:31:00 -0800
 
 nvidia-graphics-drivers (1.0.6629+1-1) unstable; urgency=low
 
