--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (1.0.7174-1) unstable; urgency=low
+
+  * New upstream.
+  * add nvidia-glx-ia32 package for amd64 (closes: #257375) 
+
+ -- Randall Donald <rdonald@debian.org>  Fri,  1 Apr 2005 14:54:17 -0800
+
 nvidia-graphics-drivers (1.0.7167-1) unstable; urgency=low
 
   * New upstream. (closes: #299073)
