--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (1.0.7174-2) unstable; urgency=low
+
+  * use -pkg2 (renamed to pkg0) for lib32 files in nvidia-glx-ia32 package 
+    (closes: #257375)
+
+ -- Randall Donald <rdonald@debian.org>  Tue,  5 Apr 2005 15:10:03 -0700
+
 nvidia-graphics-drivers (1.0.7174-1) unstable; urgency=low
 
   * New upstream.
