--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,9 @@
+nvidia-kernel (1.0.7174-3) unstable; urgency=low
+
+  * reinclude nvidia docs 
+
+ -- Randall Donald <rdonald@debian.org>  Thu,  7 Apr 2005 02:39:50 -0700
+
 nvidia-kernel (1.0.7174-2) unstable; urgency=low
 
   * use -pkg2 (renamed to pkg0) for lib32 files in nvidia-glx-ia32 package 
