--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,17 @@
+nvidia-kernel (1.0.7667-1) experimental; urgency=low
+
+  * New upstream (closes: #315446)
+  * Thanks again to Harald Dunkel for patch and amd64 testing.
+
+ -- Randall Donald <rdonald@debian.org>  Fri, 24 Jun 2005 22:51:46 -0700
+
+nvidia-kernel (1.0.7664-2) experimental; urgency=low
+
+  * downgrade the libc6 change back to the version in unstable. 
+    (closes: #315313) 
+
+ -- Randall Donald <rdonald@debian.org>  Tue, 21 Jun 2005 14:07:42 -0700
+
 nvidia-kernel (1.0.7664-1) experimental; urgency=low
 
   * The "Commander Cool Drew Hess" release.
