--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,25 @@
+nvidia-kernel (1.0.8174-1) unstable; urgency=low
+
+  * The "Radiohead" Release ;)
+  * New upstream.
+  * Upload to unstable.
+  * Thanks to Harald Dunkel for initial build.
+  * LEGACY GPUs: If you have a TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
+    Quadro, GeForce2 Pro, GeForce2 GTS, GeForce2 Ultra, GeForce2 Ti,
+    Quadro2Pro, DO NOT INSTALL THIS RELEASE!!! They are not supported.
+  * update NEWS files again.
+  * add Xorg 6.8 to the descriptions to cut down on confusion.
+  * add reference to linux- kernel packages in README.Debian
+  * nvidia-xconfig will be in a separate package.  
+
+ -- Randall Donald <rdonald@debian.org>  Sat, 10 Dec 2005 18:33:37 -0800
+
+nvidia-kernel (1.0.8174-0) unstable; urgency=low
+
+  * new upstream
+
+ -- Harald Dunkel <harald.dunkel@t-online.de>  Wed,  7 Dec 2005 19:40:50 +0100
+
 nvidia-kernel (1.0.7676-2) experimental; urgency=low
 
   * add exit 0 to module postrm (closes: #252018)
