--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (1.0.8178-2) unstable; urgency=low
+
+  * very belated change of kernel-image to linux-image in Recommends. 
+
+ -- Randall Donald <rdonald@debian.org>  Mon, 13 Feb 2006 20:26:15 -0800
+
 nvidia-graphics-drivers (1.0.8178-1) unstable; urgency=low
 
   * Upload to archive.
