--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (1.0.8756-3) unstable; urgency=low
+
+  * Adjust for Xorg7.0 support. Thanks to Rasmus Bog Hansen <moffe@zz9.dk>
+
+ -- Randall Donald <rdonald@debian.org>  Tue, 11 Apr 2006 10:08:13 -0700
+
 nvidia-graphics-drivers (1.0.8756-2) unstable; urgency=low
 
   * nvidia-glx-dev: Add the missing Provides: libgl-dev (closes: #361589)  
