--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,8 +1,16 @@
+nvidia-kernel (1.0.8762-2) unstable; urgency=low
+
+  * Have nvidia-glx-dev conflict with mesa-common-dev
+
+ -- Randall Donald <rdonald@debian.org>  Fri,  2 Jun 2006 20:44:38 -0700
+
 nvidia-kernel (1.0.8762-1) unstable; urgency=low
 
   * New upstream.
+  * take out dh_strip temporarily while the current strip fails on the
+    nvidia libs. 
 
- -- Randall Donald <rdonald@debian.org>  Mon, 22 May 2006 15:23:44 -0700
+ -- Randall Donald <rdonald@debian.org>  Mon, 22 May 2006 15:26:58 -0700
 
 nvidia-kernel (1.0.8756-4) unstable; urgency=low
 
