uncomment dh_installmodules in n-g-d's module rules file
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@32 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 nvidia-graphics-drivers (1.0.8774-1) unstable; urgency=low
 
   * New upstream. (closes: #384608)
+  * uncomment dh_installmodules in module's rules file.
+  * Some important bugs will be fixed with -2
 
- -- Randall Donald <rdonald@debian.org>  Fri, 25 Aug 2006 16:02:37 -0700
+ -- Randall Donald <rdonald@debian.org>  Mon, 28 Aug 2006 20:27:45 -0700
 
 nvidia-graphics-drivers (1.0.8762-2) unstable; urgency=low
 
