--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (1.0.8774-2) experimental; urgency=low
+
+  * make nvidia-glx provide xserver-xorg-video-1.0 for xord 7.1
+
+ -- Randall Donald <rdonald@debian.org>  Mon, 28 Aug 2006 20:54:34 -0700
+
 nvidia-graphics-drivers (1.0.8774-1) unstable; urgency=low
 
   * New upstream. (closes: #384608)
