nvidia-graphics-drivers: close bug 385114 in changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@35 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (1.0.8774-2) experimental; urgency=low
 
-  * make nvidia-glx provide xserver-xorg-video-1.0 for xord 7.1
+  * make nvidia-glx provide xserver-xorg-video-1.0 for xord 7.1 
+  (closes: #385114) 
 
  -- Randall Donald <rdonald@debian.org>  Mon, 28 Aug 2006 20:54:34 -0700
 
