--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+nvidia-graphics-drivers (1.0.8774-4) unstable; urgency=high
+
+  * Have the init script test for the existence of the diverted
+  libGL.so.1.2.xlibmesa	file and then create a /usr/lib/libGL.so.1.2 symlink
+  to it. Slightly evil but doesn't leave any dangling symlinks after the
+  init script is called. No more dangling libGL.so
+  (closes: #208198)
+  * High-urgency upload for RC bugfix.
+  * run a version-change to update files in subversion, especially control
+  (closes: #391795)
+  * Clean up X11R6 diversions. (closes: #380433) 
+
+ -- Randall Donald <rdonald@debian.org>  Mon,  9 Oct 2006 16:18:26 -0700
+
 nvidia-graphics-drivers (1.0.8774-3) unstable; urgency=low
 
   * make nvidia-glx provide xserver-xorg-video-1.0 for xorg 7.1
