--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (1.0.8774-9) unstable; urgency=medium
+
+  * New upstream.
+  * Includes upstream hotfix for Rapid7 Advisory R7-0025 Buffer Overflow
+    (closes: #393573)
+  * urgency=medium for RC bug fix  
+
+ -- Randall Donald <rdonald@debian.org>  Thu, 19 Oct 2006 18:26:24 -0700
+
 nvidia-graphics-drivers (1.0.8774-7) unstable; urgency=low
 
   * add diversion of libGL.so to nvidia-glx-ia32 (closes: #393056)
