--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (1.0.9629-1) unstable; urgency=low
+
+  * New Upstream (closes: #397505)
+  * Check for compiler existance (closes: #319544)
+
+ -- Randall Donald <rdonald@debian.org>  Sat, 11 Nov 2006 13:35:39 -0800
+
 nvidia-graphics-drivers (1.0.8776-1) unstable; urgency=medium
 
   * New upstream.
