apply cc and nvidia-glx-dev.links fixes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/tags/1.0.8776-1@148 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (1.0.8776-2) unstable; urgency=low
+
+  * Check for compiler existance (closes: #319544)
+  * remove old nvidia-glx-dev.links lines (closes: #398677)
+
+ -- Randall Donald <rdonald@debian.org>  Sat, 18 Nov 2006 21:07:46 -0800
+
 nvidia-graphics-drivers (1.0.8776-1) unstable; urgency=medium
 
   * New upstream.
