--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (1.0.8776-3) unstable; urgency=low
+
+  * rm libGL.so created by init script. (closes: #400129)
+
+ -- Randall Donald <rdonald@debian.org>  Sun,  3 Dec 2006 17:55:23 -0800
+
 nvidia-graphics-drivers (1.0.8776-2) unstable; urgency=low
 
   * Check for compiler existance (closes: #319544)
