--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (1.0.8776-4) unstable; urgency=high
+
+  * Add patch for compiling against 2.6.19. (closes: #401201, #402000)
+
+ -- Randall Donald <rdonald@debian.org>  Thu,  4 Jan 2007 20:18:03 -0800
+
 nvidia-graphics-drivers (1.0.8776-3) unstable; urgency=low
 
   * rm libGL.so created by init script. (closes: #400129)
