--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (1.0.9755-1) unstable; urgency=low
+
+  * new upstream uploaded to unstable (closes: #415041)
+  * change description to refer only to xorg. (closes: #404599, #402223)
+  * fix Description regarding supported cards. (closes: #416946)
+  * Add Vcs header 
+
+ -- Randall Donald <rdonald@debian.org>  Sat, 21 Apr 2007 16:03:14 -0700
+
 nvidia-graphics-drivers (1.0.9746-2) experimental; urgency=low
 
   * include libnvidia-wfb.so.<version> for 8800 peeps.
