--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (100.14.06-1) unstable; urgency=low
+
+  * New upstream.
+
+ -- Randall Donald <rdonald@debian.org>  Sat, 16 Jun 2007 20:12:55 -0700
+
 nvidia-graphics-drivers (1.0.9755-1) unstable; urgency=low
 
   * new upstream uploaded to unstable (closes: #415041)
