dont use the beta drivers dummy
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@264 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (100.14.09-1) unstable; urgency=low
+
+  * The "use the released version and not the beta drivers" release.
+
+ -- Randall Donald <rdonald@debian.org>  Tue, 19 Jun 2007 23:43:48 -0700
+
 nvidia-graphics-drivers (100.14.06-1) unstable; urgency=low
 
   * New upstream.
