--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (100.14.19-1) UNRELEASED; urgency=low
+
+  * new upstream.
+  * Xorg 7.3 compatible (closes:   )
+  * divert libwfb.so and libGLcore.so (closes: )
+
+ -- Randall Donald <rdonald@debian.org>  Wed, 19 Sep 2007 12:03:12 -0700
+
 nvidia-graphics-drivers (100.14.11-1) unstable; urgency=low
 
   * New upstream. (closes: #430841)
