move use nvidia-kernel-source line up in description
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@315 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ nvidia-graphics-drivers (100.14.19-1) UNRELEASED; urgency=low
   * new upstream.
   * Xorg 7.3 compatible (closes:   )
   * divert libwfb.so and libGLcore.so (closes: )
+  * change maintainer to packaging team. 
 
- -- Randall Donald <rdonald@debian.org>  Wed, 19 Sep 2007 12:03:12 -0700
+ -- Randall Donald <rdonald@debian.org>  Wed, 19 Sep 2007 12:34:02 -0700
 
 nvidia-graphics-drivers (100.14.11-1) unstable; urgency=low
 
