--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
 nvidia-graphics-drivers (100.14.19-1) UNRELEASED; urgency=low
 
   * new upstream.
-  * Xorg 7.3 compatible (closes:   )
-  * divert libwfb.so and libGLcore.so (closes: )
-  * change maintainer to packaging team. 
+  * Xorg 7.3 compatible (closes: #420177 )
+  * divert libwfb.so and libGLcore.so (closes: #442846, #441400)
+  * change maintainer to packaging team.
+  * change x11-common depends to 1:7.3+2
+  * change provides to xserver-xorg-video-2
 
- -- Randall Donald <rdonald@debian.org>  Wed, 19 Sep 2007 12:34:02 -0700
+ -- Randall Donald <rdonald@debian.org>  Sat, 22 Sep 2007 16:39:06 -0700
 
 nvidia-graphics-drivers (100.14.11-1) unstable; urgency=low
 
