--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ nvidia-graphics-drivers (100.14.19-1) UNRELEASED; urgency=low
   * change maintainer to packaging team.
   * change x11-common depends to 1:7.3+2
   * change provides to xserver-xorg-video-2
+  * remove use of update-modules (closes: #435650)
 
- -- Randall Donald <rdonald@debian.org>  Sat, 22 Sep 2007 16:39:06 -0700
+ -- Randall Donald <rdonald@debian.org>  Sat, 22 Sep 2007 16:56:18 -0700
 
 nvidia-graphics-drivers (100.14.11-1) unstable; urgency=low
 
