--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (100.14.19-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (100.14.19-1) unstable; urgency=low
 
   * new upstream.
   * Xorg 7.3 compatible (closes: #420177 )
@@ -8,7 +8,7 @@ nvidia-graphics-drivers (100.14.19-1) UNRELEASED; urgency=low
   * change provides to xserver-xorg-video-2
   * remove use of update-modules (closes: #435650)
 
- -- Randall Donald <rdonald@debian.org>  Sat, 22 Sep 2007 16:56:18 -0700
+ -- Randall Donald <rdonald@debian.org>  Sat, 22 Sep 2007 17:16:06 -0700
 
 nvidia-graphics-drivers (100.14.11-1) unstable; urgency=low
 
