--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
-nvidia-graphics-drivers (169.07-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (169.07-1) unstable; urgency=low
 
   * New upstream.
   * Remove ROOT_CMD from debian.binary/rules (closes: 416594)
-  * include both nv-kernel.o and detect which to use at kernel-source
+  * always include x86_64 nv-kernel.o and detect which to use at kernel-source
   build time. (closes: #458295, #437128)
   * move patches dir out of the way.
 
- -- Randall Donald <rdonald@debian.org>  Fri, 21 Dec 2007 22:54:29 -0800
+ -- Randall Donald <rdonald@debian.org>  Mon, 07 Jan 2008 12:15:15 -0800
 
 nvidia-graphics-drivers (100.14.19-2) UNRELEASED; urgency=low
 
