--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,21 @@
+nvidia-kernel (169.07-1) unstable; urgency=low
+
+  * New upstream.
+  * Remove ROOT_CMD from debian.binary/rules (closes: 416594)
+  * always include x86_64 nv-kernel.o and detect which to use at kernel-source
+  build time. (closes: #458295, #437128)
+  * move patches dir out of the way.
+
+ -- Randall Donald <rdonald@debian.org>  Mon, 07 Jan 2008 12:15:15 -0800
+
+nvidia-kernel (100.14.19-2) UNRELEASED; urgency=low
+
+  * Add linux-modules-nonfree-2.6 integration (closes: #446232)
+    - rename tarball to nvidia-kernel.tar.bz2
+    - add toplevel Makefile
+
+ -- Randall Donald <rdonald@debian.org>  Thu, 01 Nov 2007 10:23:13 -0700
+
 nvidia-kernel (100.14.19-1) unstable; urgency=low
 
   * new upstream.
