--- a/debian/changelog
+++ b/debian/changelog
@@ -5,16 +5,9 @@ nvidia-graphics-drivers (169.07-1) unstable; urgency=low
   * always include x86_64 nv-kernel.o and detect which to use at kernel-source
   build time. (closes: #458295, #437128)
   * move patches dir out of the way.
-
+  * rename tarball to nvidia-kernel.tar.bz2 for upcoming module packaging.
+    
  -- Randall Donald <rdonald@debian.org>  Mon, 07 Jan 2008 12:15:15 -0800
-
-nvidia-graphics-drivers (100.14.19-2) UNRELEASED; urgency=low
-
-  * Add linux-modules-nonfree-2.6 integration (closes: #446232)
-    - rename tarball to nvidia-kernel.tar.bz2
-    - add toplevel Makefile
-
- -- Randall Donald <rdonald@debian.org>  Thu, 01 Nov 2007 10:23:13 -0700
 
 nvidia-graphics-drivers (100.14.19-1) unstable; urgency=low
 
