--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nvidia-graphics-drivers (169.07-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (169.07-2) unstable; urgency=low
 
   * Fix permissions on patches.old (closes: #459848, #460173)
   * fix root_cmd (closes: #459833)
 
- -- Randall Donald <rdonald@debian.org>  Sat, 12 Jan 2008 14:39:35 -0800
+ -- Randall Donald <rdonald@debian.org>  Sat, 12 Jan 2008 17:10:40 -0800
 
 nvidia-graphics-drivers (169.07-1) unstable; urgency=low
 
