--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (169.12-1) UNRELEASED; urgency=low
   * New upstream.
   * remove xserver-xorg-core dependency. 
   * add cuda files (closes: #463776)
+  * add bzip2 to build-depends. (closes: #466139)
 
  -- Randall Donald <rdonald@debian.org>  Wed, 06 Feb 2008 10:41:06 -0800
 
