--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,13 @@
-nvidia-graphics-drivers (169.12-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (169.12-1) unstable; urgency=low
 
   * fix shlib dep
-  * add kernel module Makefile infrastructure for linux-modules-nonfree-2.6. (closes: #446232)
   * New upstream.
   * remove xserver-xorg-core dependency. 
   * add cuda files (closes: #463776)
   * add bzip2 to build-depends. (closes: #466139)
   * add uploaders field that went missing: (closes: #454999, #472448)
 
- -- Randall Donald <rdonald@debian.org>  Wed, 06 Feb 2008 10:41:06 -0800
+ -- Randall Donald <rdonald@debian.org>  Sat, 05 Apr 2008 17:59:56 -0700
 
 nvidia-graphics-drivers (169.09-1) unstable; urgency=low
 
