add Len's kernel module patch to changelog ;)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@380 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (169.12-2) UNRELEASED; urgency=low
+
+  * Add linux-modules-nonfree-2.6 intergration (closes: #446232, #437129)
+  * create storage directories for old patches and don't include in binary
+    packages.
+
+ -- Randall Donald <rdonald@debian.org>  Tue, 06 May 2008 22:10:08 -0700
+
 nvidia-graphics-drivers (169.12-1) unstable; urgency=low
 
   * fix shlib dep
