--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (169.12-2) UNRELEASED; urgency=low
   * create storage directories for old patches and don't include in binary
     packages.
   * Remove wfb diversion and don't install nvidia's copy.
+  * Patch for 2.6.25 support
+  * Patch to compile on xen enabled kernels (closes: #476504, #481485)
 
  -- Randall Donald <rdonald@debian.org>  Tue, 06 May 2008 22:10:08 -0700
 
