--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (169.12-3) unstable; urgency=low
+
+  * Make sure wfb diversion is removed. (closes: #482995)
+
+ -- Randall Donald <rdonald@debian.org>  Mon, 26 May 2008 09:27:40 -0700
+
 nvidia-graphics-drivers (169.12-2) unstable; urgency=low
 
   * Add initial linux-modules-nonfree-2.6 intergration, 2.6.24 only
