add LSB headers to nvidia-glx init
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@400 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
 nvidia-graphics-drivers (173.14.05-1) unstable; urgency=low
 
+  [ Randall Donald ]
   * New upstream. (closes: #483619)
   * move xen patch to source build patches.
   * remove 2.6.25 patch, now is upstream.
+  
+  [ Lennart Sorensen ]
+  * new Xen patch for 173.04.05.
+
+  [ Randall Donald ]
+  * add Lsb headers (closes: #479242) 
 
  -- Randall Donald <rdonald@debian.org>  Tue, 03 Jun 2008 21:14:40 -0700
 
