comment out chmod for missing patch directory
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@408 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,9 @@
+nvidia-kernel (173.14.09-2) unstable; urgency=low
+
+  * comment out chmod on missing patch directory. (closes: #487624, #487350)
+
+ -- Randall Donald <rdonald@debian.org>  Mon, 23 Jun 2008 10:31:33 -0700
+
 nvidia-kernel (173.14.09-1) unstable; urgency=low
 
   * New upstream.
