--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (173.14.09-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (173.14.09-4) unstable; urgency=medium
 
   * Fix bashism for nvidia-glx-ia32 (closes: #495478)
 
- -- Randall Donald <rdonald@debian.org>  Thu, 28 Aug 2008 10:40:07 -0700
+ -- Randall Donald <rdonald@debian.org>  Thu, 28 Aug 2008 11:03:15 -0700
 
 nvidia-graphics-drivers (173.14.09-3) unstable; urgency=high
 
