--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,9 @@
+nvidia-kernel (173.14.09-4) unstable; urgency=medium
+
+  * Fix bashism for nvidia-glx-ia32 (closes: #495478)
+
+ -- Randall Donald <rdonald@debian.org>  Thu, 28 Aug 2008 11:03:15 -0700
+
 nvidia-kernel (173.14.09-3) unstable; urgency=high
 
   * Only ship TLS libs. RC bug fix (closes: #441975)
