--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,9 @@
+nvidia-kernel (177.80-1) experimental; urgency=low
+
+  * New upstream.  
+
+ -- Randall Donald <rdonald@debian.org>  Tue, 07 Oct 2008 16:10:53 -0700
+
 nvidia-kernel (173.14.09-5) unstable; urgency=high
 
   * RC bug:  write *.deb and *.changes file into the same subdirectory 
