--- a/debian.binary/changelog
+++ b/debian.binary/changelog
@@ -1,3 +1,9 @@
+nvidia-kernel (180.22-2) experimental; urgency=low
+
+  * Add VDPAU stuff (closes: #511524) 
+
+ -- Randall Donald <rdonald@debian.org>  Sun, 11 Jan 2009 13:09:26 -0800
+
 nvidia-kernel (180.22-1) experimental; urgency=low
 
   * New upstream. (closes: #501668)
